--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <link rel="shortcut icon" href="">
-  <title>calvindefi.com</title>
+  <title>yield.capital</title>
   <meta name="description" content="">
  
  <link rel="stylesheet" href="css.css">
@@ -13,11 +13,11 @@
 
 <body>
 <div class="header">
-<h1><a href="https://calvindefi.com/">calvindefi</a></h1>	
-<p>follow me on twitter <a href="https://twitter.com/calvindefi">@calvindefi</a></p>
+<h1><a href="https://calvindefi.com/">yield.capital</a></h1>	
+<p>follow us on twitter <a href="https://twitter.com/yieldcapitalnft">@yieldcapitalnft</a></p>
 </div>
 
-<img src="https://i.imgur.com/lFg1KXy.png" alt="header_image" width="180">
+<img src="https://i.imgur.com/bWrQFaP.png" alt="header_image" width="180">
 
 <div class="row">
 <div class="column">
