--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,7 @@
 
 <head>
   <link rel="shortcut icon" href="">
-  <title>portfolio - calvindefi.com</title>
+  <title>portfolio - yield.capital</title>
   <meta name="description" content="">
  
  <link rel="stylesheet" href="css.css">
@@ -12,10 +12,10 @@
 </head>
 
 <body>
-<div class="header">
-  <h1><a href="https://calvindefi.com/">calvindefi</a></h1>
-  <p>follow me on twitter <a href="https://twitter.com/calvindefi">@calvindefi</a></p>
-</div>
+  <div class="header">
+  <h1><a href="https://calvindefi.com/">yield.capital</a></h1>	
+  <p>follow us on twitter <a href="https://twitter.com/yieldcapitalnft">@yieldcapitalnft</a></p>
+  </div>
 
 <div class="header2">
 <h2>crypto portfolio:</h2>
@@ -26,8 +26,8 @@
 <p>Alchemix (ALCX)</p>
 <p>Parrot Protocol (PRT)</p>
 
-<h2>current IDO's:</h2>
-<p>Klima (KLIMA)</p>
+<br>
+<p style="color:blue;">last updated: 5/11/2021</p>
 </div>
 
 </body>
