--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <p>follow us on twitter <a href="https://twitter.com/yieldcapitalnft">@yieldcapitalnft</a></p>
 </div>
 
-<img src="https://i.imgur.com/bWrQFaP.png" alt="header_image" width="140">
+<img src="https://i.imgur.com/GhrXwV6.png" alt="header_image" width="140">
 
 <div class="row">
 <div class="column">
