--- a/portfolio.html
+++ b/portfolio.html
@@ -20,12 +20,13 @@
 <div class="header2">
 <h2>crypto portfolio:</h2>
 <p>Bitcoin (BTC)</p>
-<p>Ethereum (ETH)</p>
 <p>Olympus (OHM)</p>
 <p>Tokemak (TOKE)</p>
 <p>Alchemix (ALCX)</p>
 <p>Parrot Protocol (PRT)</p>
 
+<br>
+<p>80% bitcoin - 20% altcoins</p>
 <br>
 <p style="color:blue;">last updated: 5/11/2021</p>
 </div>
