--- a/csgoskins.html
+++ b/csgoskins.html
@@ -3,7 +3,7 @@
 
 <head>
   <link rel="shortcut icon" href="">
-  <title>How to hedge against a Bitcoin crash with CSGO Skins - calvindefi.com</title>
+  <title>How to hedge against a Bitcoin crash with CSGO Skins - yield.capital</title>
   <meta name="description" content="">
  
  <link rel="stylesheet" href="css.css">
@@ -13,8 +13,8 @@
 
 <body>
 <div class="header">
-  <h1><a href="https://calvindefi.com/">calvindefi</a></h1>	
-  <p>follow me on twitter <a href="https://twitter.com/calvindefi">@calvindefi</a></p>
+  <h1><a href="https://calvindefi.com/">yield.capital</a></h1>	
+  <p>follow me on twitter <a href="https://twitter.com/yieldcapitalnft">@yieldcapitalnft</a></p>
 </div>
 
 <img src="https://i.imgur.com/MtnSUm5.png" alt="header_image" width="200">
