--- a/index.html
+++ b/index.html
@@ -12,33 +12,7 @@
 </head>
 
 <body>
-<div class="header">
-<h1><a href="https://snowneko.finance/">snowneko.finance</a></h1>	
-<p>follow us on twitter <a href="https://twitter.com/snownekoavax">@snownekoavax</a></p>
-</div>
-
-<img src="https://s2.coinmarketcap.com/static/img/coins/200x200/13757.png" alt="header_image" width="140">
-
-<div class="row">
-<div class="column">
-<h2>about us:</h2>
-<p>NEKO is a rebase token on Avalance Network. Each transaction has a 4% transaction fee. 2% is burned forever while the other 2% is distributed to all SnowNeko holders.</p>
-<br>
-<p>Fair listing - No Presale.</p>
- <p>All NEKO tokens have fairly been distributed on TraderJoe with a maximum buy order of 1% of the total supply, no presale has taken place.</p>
-</div>
-<div class="column">
-<h2>tokenomics:</h2>
-<p>max supply: 1 Trillion</p>
-<p>transaction tax: 4%</p>
-<p>>burn: 2%</p>
-<p>>distrubuted to holders: 2%</p>
-
-</div>
-<div class="column">
-<h2>links:</h2>
-<p>discord: coming soon</p>
-</div>	
+<h2>soon tm</h2>
 </div>
 
 </body>
