--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
   <link rel="shortcut icon" href="">
   <title>snowneko.finance</title>
+  <link rel="icon" type="image/x-icon" href="https://i.imgur.com/VBBCV09.png">
+
   <meta name="description" content="">
  
  <link rel="stylesheet" href="css.css">
@@ -12,7 +14,37 @@
 </head>
 
 <body>
-<h2>soon tm</h2>
+<div class="header">
+<h1><a href="https://snowneko.finance/">snowneko.finance</a></h1>	
+<p>follow us on twitter <a href="https://twitter.com/snownekoavax">@snownekoavax</a></p>
+</div>
+
+<img src="https://i.imgur.com/ytSuLGX.png" alt="header_image" width="140">
+
+<div class="row">
+<div class="column">
+<h2>about us:</h2>
+<p>NEKO is a rebase token on Avalance Network. Each transaction has a 4% transaction fee. 2% is burned forever while the other 2% is distributed to all SnowNeko holders.</p>
+<br>
+<p>Fair listing - No Presale.</p>
+ <p>All NEKO tokens have fairly been distributed on TraderJoe with a maximum buy order of 1% of the total supply, no presale has taken place.</p>
+</div>
+<div class="column">
+<h2>tokenomics:</h2>
+<p>max supply: 1 Trillion</p>
+<p>transaction tax: 4%</p>
+<p>>burn: 2%</p>
+<p>>distrubuted to holders: 2%</p>
+
+</div>
+<div class="column">
+<h2>links:</h2>
+<p><a href="https://traderjoexyz.com/#/trade?inputCurrency=0xfCAFD21C47070085B2602b3d7e8e04493dCfAD8b">buy/sell</a></p>
+<p><a href="https://snowtrace.io/address/0xfcafd21c47070085b2602b3d7e8e04493dcfad8b">contract</a></p>
+<p><a href="https://twitter.com/snownekoavax">twitter</a></p>
+<p><a href="https://discord.gg/U4NMjSwhvQ">discord</a></p>
+<p><a href="https://medium.com/@snownekoavax/welcome-to-snowneko-3260b7ec2e7f">medium</a></p>
+</div>	
 </div>
 
 </body>
