--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
 <div class="row">
 <div class="column">
 <h2>about us:</h2>
-<p>NEKO is a rebase token on Avalance Network. Each transaction has a 4% transaction fee. 2% is burned forever while the other 2% is distributed to all SnowNeko holders.</p>
+<p>NEKO is a rebase token on Avalanche Network. Each transaction has a 4% transaction fee. 2% is burned forever while the other 2% is distributed to all SnowNeko holders.</p>
 <br>
 <p>Fair listing - No Presale.</p>
- <p>All NEKO tokens have fairly been distributed on TraderJoe with a maximum buy order of 1% of the total supply, no presale has taken place.</p>
+ <p>All NEKO tokens have fairly been distributed on Trader Joe with a maximum buy order of 1% of the total supply, no presale has taken place.</p>
 </div>
 <div class="column">
 <h2>tokenomics:</h2>
