--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <p>max supply: 1 Trillion</p>
 <p>transaction tax: 4%</p>
 <p>>burn: 2%</p>
-<p>>distrubuted to holders: 2%</p>
+<p>>distributed to holders: 2%</p>
 
 </div>
 <div class="column">
