--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ ive been in defi since day one & im currently a huge frax maxi.
 </div>
 <div class="column">
 <h2>blog:</h2>
-<p>coming soon</p>
+<p><a href="how2stable">how2stable</a></p>
 
 </div>	
 </div>
