--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <p>follow me on twitter <a href="https://twitter.com/pokegodcrypto">@pokegodcrypto</a></p>
 </div>
 
-<img src="https://i.imgur.com/TzFgWqQ.png" alt="header_image" width="200">
+<img src="https://i.imgur.com/v3sRqje.png" alt="header_image" width="200">
 
 <div class="row">
 <div class="column">
