--- a/how2stable.html
+++ b/how2stable.html
@@ -24,7 +24,7 @@
   <ul>
   <li>Platform: Frax Finance<br />Pool: Saddle alUSD/FEI/FRAX/LUSD<br />Staking Token: FRAX<br />Reward Token: FXS + others<br />APR: 25%-30%~ (1 year lock)</li>
   <li>Platform: Frax Finance<br />Pool: Vesper Orbit FRAX<br />Staking Token: FRAX<br />Reward Token: FXS + others<br />APR: 20%~ (no lock)</li>
-  <li>Platform: Uniswap<br />Pool: Uniswap V3 Pools<br />Staking Token: Stablecoins <br />Reward Token: Stablecoins<br />APR: N/A</li>
+  <li>Platform: Uniswap V3<br />Pool: Uniswap V3 Pools<br />Staking Token: Stablecoins <br />Reward Token: Stablecoins<br />APR: N/A</li>
   </ul>
 
 </div>
