--- a/portfolio.html
+++ b/portfolio.html
@@ -6,7 +6,7 @@
   <title>portfolio - pokegod.org</title>
   <meta name="description" content="">
  
- <link rel="stylesheet" href="css.css">
+ <link rel="stylesheet" href="css1.css">
 
 
 </head>
@@ -27,7 +27,7 @@
 </p>
 
 <br><br>
-<p>still large holding in stablecoins which im using to yield farm on frax & anchorprotol for 20% apy.</p>
+<p>still large holding in stablecoins which im using to yield farm on frax & uniswap V3 for ~20% apy.</p>
 
 <br>waiting for the stock market to crash before investing in stocks ^__^<br>
 
