--- a/portfolio.html
+++ b/portfolio.html
@@ -6,7 +6,7 @@
   <title>portfolio - pokegod.org</title>
   <meta name="description" content="">
  
- <link rel="stylesheet" href="css1.css">
+ <link rel="stylesheet" href="css.css">
 
 
 </head>
