--- a/websitev2/index.html
+++ b/websitev2/index.html
@@ -18,16 +18,16 @@
 <div class="fixed1">
 
 <div class="mainlogo">
-<h2><a href="/index.html">lolicon.xyz</a></h2>
+<h2><a href="/websitev2/index.html">lolicon.xyz</a></h2>
 </div>
 
   <div class="sidenav">
 
-    <a href="/images.php">images</a>
-    <a href="/videos.html">videos</a>
-<a href="/comics.html">comics</a>
-    <a href="/resources.html">resources</a>
-    <a href="/uploadimage.html">submit</a>
+    <a href="/websitev2/images.php">images</a>
+    <a href="/websitev2/videos.html">videos</a>
+<a href="/websitev2/comics.html">comics</a>
+    <a href="/websitev2/resources.html">resources</a>
+    <a href="/websitev2/uploadimage.html">submit</a>
   </div>
 </div>
 
