--- a/index.html
+++ b/index.html
@@ -22,11 +22,13 @@
 <div class="row">
 <div class="column">
 <h2>who am i?</h2>
-<p>hello my name is pokegod and im a 22 year old neet.
+<p>hello my name is pokegod and im a 22 year old recovering neet.
 <br><br>
-in my free time i like to study finance & listen to music.
+in my free time i like to study finance, listen to music & play video games.
 <br><br>
-ive been in defi since day one & im currently a huge frax maxi.
+ive been a defi fan since day one and i'm always looking for the next big project (if u need an angel investor hit me up xoxo 🙈)
+<br><br>
+i also do some traditional investing, but thats mostly boring stuff like index funds & bonds.
 </p>
 
 
