--- a/index.html
+++ b/index.html
@@ -14,21 +14,21 @@
 <body>
 <div class="header">
 <h1><a href="https://pokegod.org/">pokegod.org</a></h1>
-<p>follow me on twitter <a href="https://twitter.com/pokegodcrypto">@pokegodcrypto</a></p>
+<p>follow me on twitter <a href="https://twitter.com/pokegodddd">@pokegodcrypto</a></p>
 </div>
 
-<img src="https://i.imgur.com/v3sRqje.png" alt="header_image" width="200">
+<img src="https://i.imgur.com/mICXSfd.png" alt="header_image" width="200">
 
 <div class="row">
 <div class="column">
 <h2>who am i?</h2>
-<p>hello my name is pokegod and im a 22 year old recovering neet.
+<p>hello my name is pokegod and im a xx year old recovering neet.
 <br><br>
 in my free time i like to study finance, listen to music & play video games.
 <br><br>
-ive been a defi fan since day one and i'm always looking for the next big project (if u need an angel investor hit me up xoxo 🙈)
+og defi investor -- milady enjoyer.
 <br><br>
-i also do some traditional investing, but thats mostly boring stuff like index funds & bonds.
+if u have any questions hit me up :3
 </p>
 
 
@@ -38,7 +38,7 @@ i also do some traditional investing, but thats mostly boring stuff like index f
 <p><a href="portfolio">portfolio</a></p>
 </div>
 <div class="column">
-<h2>blog:</h2>
+<h2>links:</h2>
 <p><a href="how2stable">how2stable</a></p>
 
 </div>	
