--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
 <body>
   <div class="header">
   <h1><a href="https://pokegod.org/">pokegod.org</a></h1>
-  <p>follow me on twitter <a href="https://twitter.com/pokegodcrypto">@pokegodcrypto</a></p>
+  <p>follow me on twitter <a href="https://twitter.com/pokegodddd">@ppokegodddd</a></p>
   </div>
 
 <div class="header2">
@@ -27,16 +27,16 @@
 </p>
 
 <br><br>
-<p>still large holding in stablecoins which im using to yield farm on frax & uniswap V3 for ~20% apy.</p>
+<p>still large holdings in stablecoins from selling btc at $45k, might buy some more if btc dips low enough, but still more than happy with my current btc amount.</p>
 
-<br>waiting for the stock market to crash before investing in stocks ^__^<br>
+<br>traditional finance: boring etfs.<br>
 
 <br><br>
 
 <p>newly added: N/A</p>
 
 <br>
-<p style="color:blue;">last updated: 21/04/2022</p>
+<p style="color:blue;">last updated: 03/05/2023</p>
 </div>
 
 </body>
