--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 <div class="header">
 <h1><a href="https://pokegod.org/">pokegod.org</a></h1>
-<p>follow me on twitter <a href="https://twitter.com/pokegodddd">@pokegodcrypto</a></p>
+<p>follow me on twitter <a href="https://twitter.com/pokegodddd">@ppokegodddd</a></p>
 </div>
 
 <img src="https://i.imgur.com/mICXSfd.png" alt="header_image" width="200">
@@ -28,7 +28,7 @@ in my free time i like to study finance, listen to music & play video games.
 <br><br>
 og defi investor -- milady enjoyer.
 <br><br>
-if u have any questions hit me up :3
+if u have any questions please hit me up :3
 </p>
 
 
@@ -40,6 +40,9 @@ if u have any questions hit me up :3
 <div class="column">
 <h2>links:</h2>
 <p><a href="how2stable">how2stable</a></p>
+<p><a href="how2stable">art</a></p>
+<p><a href="how2stable">games</a></p>
+<p><a href="how2stable">pokemon</a></p>
 
 </div>	
 </div>
