--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@ if u have any questions please hit me up :3
 <p><a href="how2stable">art</a></p>
 <p><a href="how2stable">games</a></p>
 <p><a href="how2stable">pokemon</a></p>
+<p><a href="how2stable">network spirituality</a></p>
+<p><a href="how2stable">milady</a></p>
 
 </div>	
 </div>
