--- a/index.html
+++ b/index.html
@@ -40,8 +40,7 @@ if u have any questions please hit me up :3
 <div class="column">
 <h2>links:</h2>
 <p><a href="how2stable">how2stable</a></p>
-<p><a href="how2stable">art</a></p>
-<p><a href="how2stable">games</a></p>
+<p><a href="how2stable">memes</a></p>
 <p><a href="how2stable">pokemon</a></p>
 <p><a href="how2stable">network spirituality</a></p>
 <p><a href="how2stable">milady</a></p>
