--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@ if u have any questions please hit me up :3
 <div class="column">
 <h2>links:</h2>
 <p><a href="how2stable">how2stable</a></p>
-<p><a href="how2stable">memes</a></p>
+<p><a href="how2stable">funny pics</a></p>
 <p><a href="how2stable">pokemon</a></p>
 <p><a href="how2stable">network spirituality</a></p>
-<p><a href="how2stable">milady</a></p>
+<p><a href="how2stable">nfts</a></p>
 
 </div>	
 </div>
